--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>EmmanuelSanchg</title>
 </head>
 <body>
-    <h1>EmmanuelSanchg</h1>
+    <header>
+        <center>
+            <h1>EmmanuelSanchg</h1>
+        </center>
+    </header>
+    <main>
+        <section>
+
+            <h2>Quien soy?</h2>
+            <p>
+                mi nombre es Emmanuel sanchez Gutierrez, soy estudion de desarrollo web online autodidacta, me gusta aprender sobre nuevas tecnologias y entender como secrea y funciona internet.
+            </p>
+        </section>
+        <img src="#" alt="imagen de emmanuel">
+    </main>
 </body>
 </html>
