solucioin de errores ortograficos

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <h2>Quien soy?</h2>
             <p>
-                mi nombre es Emmanuel sanchez Gutierrez, soy estudion de desarrollo web online autodidacta, me gusta aprender sobre nuevas tecnologias y entender como secrea y funciona internet.
+                mi nombre es Emmanuel sanchez Gutierrez, soy estudiante de desarrollo web online autodidacta, me gusta aprender sobre nuevas tecnologias y entender como se crea y funciona internet.
             </p>
         </section>
         <img src="#" alt="imagen de emmanuel">
