--- a/index.html
+++ b/index.html
@@ -5,22 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EmmanuelSanchg</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <center>
-            <h1>EmmanuelSanchg</h1>
-        </center>
+    <header class="header">
+        <figure class="container-fondo">
+            <img src="./img/cover-image.png" alt="imagen de fondo del header" class="fondo">
+        </figure>
+        <figure class="container-imagen-perfil">
+            <img src="./img/profile-pic.png" alt="imagen de perfil de Emmanuel Sanchez" class="imagen-perfil">
+        </figure>
     </header>
-    <main>
-        <section>
-
-            <h2>Quien soy?</h2>
-            <p>
-                mi nombre es Emmanuel sanchez Gutierrez, soy estudiante de desarrollo web online autodidacta, me gusta aprender sobre nuevas tecnologias y entender como se crea y funciona internet.
-            </p>
-        </section>
-        <img src="#" alt="imagen de emmanuel">
-    </main>
 </body>
 </html>
