se agrego titulo y estilos

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <figure class="container-imagen-perfil">
             <img src="./img/profile-pic.png" alt="imagen de perfil de Emmanuel Sanchez" class="imagen-perfil">
         </figure>
+        <h1 class="title">Emmanuel Sanchez Gutierrez</h1>
     </header>
 </body>
 </html>
