--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
         </figure>
         <h1 class="title">Emmanuel Sanchez Gutierrez</h1>
     </header>
+    <!-- comment -->
 </body>
 </html>
